--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sti.testlistview">
 
-    <!--<uses-permission android:name="android.permission.CALL_PHONE"/>-->
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,15 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Settings"></activity>
-        <activity android:name=".DetalhesAluno" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashScreen" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Settings" android:label="Configurações" />
+        <activity android:name=".DetalhesAluno" android:label="Detalhes do aluno" />
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
